# CardPyle

./: README.md
src/: CreatureCard.py  Player.py  card.py  deck.py  graveyard.py  main.py  menu.py  playerFace.py  pyproject.toml
src/cardpyle/: __init__.py  cards.py  decklists.py  game.py  player.py  zones.py
src/data/: cards.yaml
src/decks/: deck1.yaml  deck2.yaml
src/tests/: conftest.py  test_basic_flow.py
