[project]
name = "cardpyle"
version = "0.1.0"
description = "Card game engine (MVP) with zones, turn phases and mana system"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"
